fixed text alignment issue

--- a/src/main/webapp/app/exercises/programming/shared/code-editor/layout/code-editor-grid.scss
+++ b/src/main/webapp/app/exercises/programming/shared/code-editor/layout/code-editor-grid.scss
@@ -175,7 +175,7 @@ Collapsable styling
         cursor: pointer;
         .header {
             writing-mode: vertical-rl;
-            margin: auto;
+            margin-left: -3px;
         }
         fa-icon {
             display: flex;
